--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,12 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# macOS system files 
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# JB Rider project folder
+.idea/
+*.iml
